--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,10 @@
 spring.application.name=iot-service
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://root:dolkBpmNisOQdakjQjoZkwPBpBNxrOOe@autorack.proxy.rlwy.net:18857/railway
+#spring.datasource.url=jdbc:mysql://localhost:3306/iot_services
 spring.datasource.username=root
 spring.datasource.password=dolkBpmNisOQdakjQjoZkwPBpBNxrOOe
+#spring.datasource.password=password
 spring.main.allow-circular-references=true
 qr.api.url=https://api.qr-code-generator.com/v1/create
 qr.api.access.token=D7RaqGRMTV3f7x_4wHqI4q39lIwH3nVV17042dPbQKQhou-6O63H3BkC0Tm1C94u
